docker-kubernetes-deployments/mongodb-deployments/mongodb-express/mongodb-express-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-express # The name of the Deployment.
  namespace: mongodb-express
spec:
  selector:
    matchLabels:
      app: mongodb-express # Run MongoDB Express.
  template:
    metadata:
      labels:
        app: mongodb-express
    spec:
      containers:
        - name: mongodb-express
          # image: mongo-express:0.54.0 # Use the MongoDB Express image.
          image: mongo-express
          resources:
            limits:
              # Memory.
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8081
