docker-kubernetes-deployments/mongodb-deployments/mongodb-express/mongodb-express-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-express-service
  namespace: mongodb-express
spec:
  selector:
    app: mongodb-express
  type: ClusterIP # Use Node.js.
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      # nodePort: 30001 # Define the local Node.js port.
