docker-kubernetes-deployments/mongodb-deployments/mongodb-express/mongodb-express-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongodb-express-ingress
  namespace: mongodb-express
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: mongodb-express.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: mongodb-express-service
                port:
                  number: 8081
